--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+    <header class="main-header">
+    	<nav class="main-navigation">
+    		<a class="main-header-logo">
+    			<img src="img/index-logo.svg" width="" height="" alt="Логотип интернет-магазина технопоинт">
+    			<!-- логотип -->
+    		</a>
 
+    		<ul class="user-navigation">
+    			<li class="login-link">Войти</li>
+    			<li class="login-link">Регистрация</li>
+    			 <!-- список в который добавляется вход и регистрация -->
+    		</ul>
+
+    		<ul class="site-navigation">
+    			<li><a href="info.html">Главная</a></li>
+    			<li><a href="company.html">Компания</a></li>
+    			<li><a href="catalog.html">Каталог</a></li>
+    			<li><a href="news.html">Новости</a></li>
+    			<li><a href="special-offer.html">Спецпредложения</a></li>
+    			<li><a href="delivery.html">Доставка</a></li>
+    			<li><a href="contacts.html">Контакты</a></li>
+    				<!-- размечаем навигацию -->
+    			</li>
+    		</ul>
+    		
+    	</nav>
+    </header>
     <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
 
   </body>
