--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     	<nav class="main-navigation">
     		<a class="main-header-logo">
     			<img src="img/index-logo.svg" width="" height="" alt="Логотип интернет-магазина технопоинт">
-    			<!-- логотип -->
     		</a>
+    		<!-- Логотип -->
+
+    		<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
     		<ul class="user-navigation">
     			<li class="login-link">Войти</li>
     			<li class="login-link">Регистрация</li>
-    			 <!-- список в который добавляется вход и регистрация -->
     		</ul>
+    		<!-- Вход и регистрация -->
 
     		<ul class="site-navigation">
     			<li><a href="info.html">Главная</a></li>
@@ -26,12 +28,99 @@
     			<li><a href="special-offer.html">Спецпредложения</a></li>
     			<li><a href="delivery.html">Доставка</a></li>
     			<li><a href="contacts.html">Контакты</a></li>
-    				<!-- размечаем навигацию -->
-    			</li>
     		</ul>
-    		
+    		<!-- Навигация -->
     	</nav>
     </header>
+
+    <main class="container">
+
+    	<section class="promo">
+    		<ul class="promo-list">
+    			<li class="materials">
+    				<h2>Материалы</h2>
+    				<a class="button" href="">на любой вкус</a>
+    			</li>
+    			<li class="tool">
+    				<h2>Инструменты</h2>
+    				<a class="button" href="">на все случаи</a>
+    			</li>
+    			<li class="technics">
+    				<h2>Техника</h2>
+    				<a class="button" href="">для стройки</a>
+    			</li>
+    			<li class="sliders">
+    				<ul>
+    			  	<li class="slider-1">	
+    			  	<h2>Перфораторы</h2>	
+    			  	<p>Настоящие мужские игрушки</p>
+    			  	<a class="button" href="catalog.html">открыть каталог</a>
+    			    </li>
+    		    </ul>
+    			</li>
+    			<li class="sales">
+    				<h2>Скидки 50%</h2>
+    				<a class="button" href="">на любой вкус</a>
+    			</li>
+    			<li class="delivery">
+    				<h2>Доставка</h2>
+    				<a class="button" href="">бесплатно</a>
+    			</li>
+
+    	<section class="popular-goods">
+    		<h2>Популярные товары:</h2>
+    		<a class="button" href="">Все популярные товары</a>
+    		<ul class="popular-goods-list">
+    			<li class="popular-good-1">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    				<span class="button button-price-1">25500 Р.</span>
+    			</li>
+    			<li class="popular-good-2">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    				<span class="button button-price-2">25500 Р.</span>
+    			</li>
+    			<li class="popular-good-3">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    				<span class="button button-price-3">25500 Р.</span>
+    			</li>
+    			<li class="popular-good-4">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    				<span class="button button-price-4">25500 Р.</span>
+    			</li>
+    		</ul>
+    	</section>
+    	<!-- Популярные товары -->
+
+    	<section class="popular-manufacturers">
+    		<h2>Популярные производители:</h2>
+    		<a class="button" href="">Все популярные производители</a>
+    		<ul class="popular-manufacturers-list">
+    			<li class="popular-manufacturer-1">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    			</li>
+    			<li class="popular-manufacturer-2">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    			</li>
+    			<li class="popular-manufacturer-3">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    			</li>
+    			<li class="popular-manufacturer-4">
+    				<h3>Перфоратор Bosch BFG 9000</h3>
+    				<p>32500 Р.</p>
+    			</li>
+    		</ul>
+    	</section>
+    	<!-- Популярные производители -->
+
+    </main>
+
     <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
 
   </body>
