--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     		</a>
     		<!-- Логотип -->
 
+    		<p><input type="search" name="q" placeholder="Поиск"> 
+        <input type="submit"></p>
+
     		<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
     		<ul class="user-navigation">
@@ -119,9 +122,42 @@
     	</section>
     	<!-- Популярные производители -->
 
+    	<section class="Services">
+    	</section>
+    	<!-- Сервисы -->
+
+    	<section class="Company">
+    	</section>
+    	<!-- о компании -->
+
+    	<section class="Contacts">
+    	</section>
+    	<!-- контакты -->
     </main>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <footer class="main-footer">
+    	<p class="footer-contacts">
+        2010-2017 Компания Техномарт<br>
+        Все права защищены
+      </p>
+
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+      	Обратная связь:<br>
+        <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p class="footer-copyright">
+      	Разработано - <br>
+        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+      </p>
+   
+    </footer> 
 
   </body>
 </html>
