--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
     	<section class="catalog">
     		<h2 class="visually-hidden">Список перфораторов</h2>
     		<ul class="catalog-list">
-    			<li class="catalog-item">
+    			<li class="catalog-item-1">
     				<h4>
     					<a href="catalog-item.html">
     						<span class="catalog-category">Перфоратор BOSCH</span>
@@ -94,8 +94,8 @@
     			<li class="catalog-item-2">
     				<h4>
     					<a href="catalog-item.html">
-    						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-category">Перфоратор Bosch</span>
+    						<span class="catalog-item-title">BFG 6000</span>
     					</a>
     				</h4>
     				<p>
@@ -104,15 +104,15 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					30500 Р.<br>
+    					<a class="button">25500 Р.</a>
     				</p>
     			</li>
     			<li class="catalog-item-3">
     				<h4>
     					<a href="catalog-item.html">
     						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-item-title">BFG 2000</span>
     					</a>
     				</h4>
     				<p>
@@ -121,8 +121,7 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					<a class="button">12500 Р.</a>
     				</p>
     			</li>
     			<li class="catalog-item-4">
@@ -145,8 +144,8 @@
     			<li class="catalog-item-5">
     				<h4>
     					<a href="catalog-item.html">
-    						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-category">Перфоратор Bosch</span>
+    						<span class="catalog-item-title">BFG 6000</span>
     					</a>
     				</h4>
     				<p>
@@ -155,15 +154,15 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					30500 Р.<br>
+    					<a class="button">25500 Р.</a>
     				</p>
     			</li>
     			<li class="catalog-item-6">
     				<h4>
     					<a href="catalog-item.html">
     						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-item-title">BFG 2000</span>
     					</a>
     				</h4>
     				<p>
@@ -172,8 +171,7 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					<a class="button">12500 Р.</a>
     				</p>
     			</li>
     			<li class="catalog-item-7">
@@ -196,8 +194,8 @@
     			<li class="catalog-item-8">
     				<h4>
     					<a href="catalog-item.html">
-    						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-category">Перфоратор Bosch</span>
+    						<span class="catalog-item-title">BFG 6000</span>
     					</a>
     				</h4>
     				<p>
@@ -206,15 +204,15 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					30500 Р.<br>
+    					<a class="button">25500 Р.</a>
     				</p>
     			</li>
     			<li class="catalog-item-9">
     				<h4>
     					<a href="catalog-item.html">
     						<span class="catalog-category">Перфоратор BOSCH</span>
-    						<span class="catalog-item-title">BFG 3000</span>
+    						<span class="catalog-item-title">BFG 2000</span>
     					</a>
     				</h4>
     				<p>
@@ -223,15 +221,77 @@
     					</a>
     				</p>
     				<p>
-    					22500 Р.<br>
-    					<a class="button">15500 Р.</a>
+    					<a class="button">12500 Р.</a>
     				</p>
     			</li>
-    			
     		</ul>
 
+    		<ul class="pagination-list">
+    			<li class="pagination-item pagination-item-current"><a>1</a></li>
+    			<li class="pagination-item"><a href="#">2</a></li>
+    			<li class="pagination-item"><a href="#">3</a></li>
+    			<li class="pagination-item"><a href="#">Следующая</a></li>
+    		</ul>
     	</section>
 
+    	<section>
+    		<h3>Пара слов о перфораторах</h3>
+    		<p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
+    			Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
+    			Ассортиментном ряду есть выбор <<трехрежимников>>: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+    		</p>
+    	</section>
     </main>
+    <footer class="main-footer">
+    	<p><img src="img/index-logo-2.svg" width="200" height="100" alt="Логотип интернет-магазина технопоинт"></p>
+    	<!-- Логотип в футере -->
+    	<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+    		+7 (812) 555-05-55</p>
+
+    		<ul class="site-navigation-footer">
+    			<li><a href="info.html">Главная</a></li>
+    			<li><a href="company.html">Компания</a></li>
+    			<li><a href="catalog.html">Каталог</a></li>
+    			<li><a href="news.html">Новости</a></li>
+    			<li><a href="special-offer.html">Спецпредложения</a></li>
+    			<li><a href="delivery.html">Доставка</a></li>
+    			<li><a href="contacts.html">Контакты</a></li>
+    		</ul>
+    		<!-- Навигация в футере -->
+
+    		<p class="footer-contacts">
+        2010-2017 Компания Техномарт<br>
+        Все права защищены</p>
+
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+
+      <p class="footer-copyright">
+      	Обратная связь:<br>
+        <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p class="footer-copyright">
+      	Разработано -<br>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </p>
+    </footer> 
+
+    <section class="modal modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль.</p>
+      <!-- Здесь будет форма -->
+      <span class="modal-close">x</span>
+    </section>
+    
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <span class="modal-close">x</span>
+    </section>
+
   </body>
-  </html>
+</html>
