--- a/index.html
+++ b/index.html
@@ -157,36 +157,52 @@
     	</section>
     	<!-- Популярные производители -->
 
-    	<section class="container-Services">
+    	<section class="container-services">
     		<h2>Сервисы</h2>
-    		<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-    		Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+    		<p>
+    			Хороший интернет-магазин отличается от плохого не только ценами!<br>
+    			Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+    		</p>
 
-    		<div class="slider-1">
+    		<div class="slide-delivery">
     			<h3>Доставка</h3>
     			<p>Мы с удовольствием доставим ваш товар прямо<br>
     				к вашему подъезду совершенно бесплатно!<br>
     				Ведь мы неплохо заработаем,<br>
     				поднимая его на ваш этаж!
     			</p>
+    			<img src="img/icon-deliver.png">
     		</div>
-    		<div class="slider-2">
-    			<p><h3>Гарантия</h3></p>
+    		<div class="slide-guarantee">
+    			<h3>Гарантия</h3>
+    			<p>
+    				Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+    			</p>
+    			<img src="img/icon-guarantee.png">
     		</div>
-    		<div class="slider-3">
-    			<p><h3>Кредит</h3></p>
+    		<div class="slide-credit">
+    			<h3>КРЕДИТ</h3>
+    			<p>
+    				Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+    			</p>
+    			<a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+    			<img src="img/icon-credit.png">
     		</div>
     	</section>
 
-    	<section class="Company">
-    		<h2>Компания <<Техномарт>></h2>
-    		<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-    		 строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
-    		<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-    		Техномарт работает со многими транспортными компаниями:</p>
-    		<p>Деловые линии</p>
-    		<p>Автотрейдинг</p>
-    		<p>ЖелДорЭкспедиция</p>
+    	<section class="сompany">
+    		<h2>Компания «Техномарт»</h2>
+    		<p>
+    			Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+    			строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.
+    		</p>
+    		<p>
+    			Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+    			Техномарт работает со многими транспортными компаниями:
+    			Деловые линии
+    			Автотрейдинг
+    			ЖелДорЭкспедиция
+    		</p>
     		<a class="button" href="#">Подробнее о компании</a>
     	</section>
     	<!-- о компании -->
